--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -552,7 +552,7 @@ section {
   text-align: center;
   z-index: 4;
 }
-.portfolio .portfolio-wrap .portfolio-links a {
+.portfolio .portfolio-wrap .portfolio-links i {
   color: #45505b;
   margin: 0 2px;
   font-size: 28px;
