--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,8 +267,8 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Poppins", sans-serif;
 }
 #hero p span {
-  color: #0563bb;
   letter-spacing: 1px;
+  border-bottom: 2px solid #0563bb;
 }
 #hero .social-links {
   margin-top: 30px;
